components/heptagon/test/bad/linear_acc.ept
const n:int = 100
const m:int = 4

fun f(x:int; acc_in : int^n at r) returns (y: int; acc_out: int^n at r)
let
  y = x + 1;
  acc_out = [acc_in with [0] = 0]
tel

fun g(tab:int^m; acc_in:int^n) returns (o:int^m; acc_out:int^n)
let
  (o, acc_out) = mapfold<<m>> f(tab, acc_in)
tel